# Schola-Herv

./: CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.yaml  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
data/: README.md  hep_scimago.xlsx  hep_test.xlsx
schola_herv/: __init__.py  cli.py  config.py  harvester.py  interview.py  jobs.py  metadata_builder.py
schola_herv/ai/: natural_language.py  ollama_manager.py  query_expander.py  relevance_filter.py  summariser.py
schola_herv/discovery/: arxiv.py  base.py  core.py  crossref.py  openalex.py  pubmed.py  semantic_scholar.py  unpaywall.py
schola_herv/downloader/: checkpoint.py  manager.py
schola_herv/downloader/sources/: arxiv.py  base.py  direct.py  pmc.py  scihub.py  unpaywall.py
schola_herv/extraction/: __init__.py  pdf.py
schola_herv/quality/: journal_filter.py  semantic_scholar.py
schola_herv/recipes/: hep.yaml  hep_small.yaml
schola_herv/utils/: dedup.py  logger.py  network.py  pdf_utils.py
tests/: conftest.py  test_discovery.py  test_downloader.py
